// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package logdb

import (
	"database/sql"
)

type Buffer struct {
	ID         []byte
	Name       string
	Kind       string
	Topic      sql.NullString
	LastSeenID []byte
	CreatedAt  string
	TopicSetBy sql.NullString
	TopicSetAt sql.NullString
}

type Message struct {
	Rowid    int64
	ID       []byte
	BufferID []byte
	Msgid    sql.NullString
	Ts       string
	Sender   string
	Account  sql.NullString
	Kind     string
	Target   sql.NullString
	Content  string
	Raw      string
	Userhost string
}

type MessagePreview struct {
	MessageID []byte
	Url       string
	Position  int64
}

type MessagesFt struct {
	Content string
	Sender  string
}
